--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ var config = {
 
     //Joueur principal
     var player;
+    var waters;
 
     function preload ()
     {
@@ -45,13 +46,20 @@ var config = {
         this.load.image('Background', 'assets/Autres/background.png');
         this.load.image('Water', 'assets/Objects/Water_Simple.png');
         this.load.image('Water2', 'assets/Objects/Water_Simple_3.png');
+        this.load.image('fish_1', 'assets/Objects/Catch/3.png');
+        this.load.image('herb1', 'assets/Objects/Grass1.png');
+        this.load.image('herb2', 'assets/Objects/Grass2.png');
+        this.load.image('herb3', 'assets/Objects/Grass3.png');
+        this.load.image('herb4', 'assets/Objects/Grass4.png');
+        this.load.image('Pillar1', 'assets/Objects/Pillar_1.png');
+        this.load.image('Pillar2', 'assets/Objects/Pillar_2.png');
 
         //Chargement des animations
         this.load.spritesheet('player_idle', 'assets/Fisherman/Fisherman_idle.png', { frameWidth: 48, frameHeight: 48 });
         this.load.spritesheet('player_fishing', 'assets/Fisherman/Fisherman_fish.png', { frameWidth: 48, frameHeight: 48 });
     }
 
-    var waters;
+   
 
     function create ()
     {
@@ -79,23 +87,82 @@ var config = {
             repeat: -1
             });
 
+        this.anims.create({
+            key: 'fishing',
+            frames: this.anims.generateFrameNumbers('player_fishing', { start: 0, end: 3 }),
+            frameRate: 6,
+            repeat: -1
+            });
 
-    //console.log("your code");
+        //console.log("your code");
+        this.cursorKeys = this.input.keyboard.createCursorKeys();
 
-    this.cursorKeys = this.input.keyboard.createCursorKeys();
+        this.add.image(600, 500, 'fish_1');
 
+        //Décorations
+        var y = 590;
+        this.add.image(30, y, 'herb1');
+        
+        this.add.image(150, y, 'herb2');
+        this.add.image(175, y, 'herb3');
+        this.add.image(250, y, 'herb4');
+        this.add.image(300, y, 'herb2');//--
+        this.add.image(315, y, 'herb4');
+        this.add.image(340, y, 'herb3');
+        this.add.image(380, y, 'herb1');
+        this.add.image(420, y, 'herb4');//--
+        this.add.image(450, y, 'herb2');
+        this.add.image(490, y, 'herb1');
+        this.add.image(530, y, 'herb3');
+        this.add.image(560, y, 'herb4');//--
+        this.add.image(620, y, 'herb2');
+        this.add.image(660, y, 'herb1');
+        this.add.image(700, y, 'herb3');
+        this.add.image(760, y, 'herb3');
+        //Pillars
+        this.add.image(165,473, 'Pillar2');
+        this.add.image(192,473, 'Pillar2');
+        this.add.image(165,505, 'Pillar2');
+        this.add.image(192,505, 'Pillar2');
+        this.add.image(165,537, 'Pillar2');
+        this.add.image(192,537, 'Pillar2');
+        this.add.image(165,569, 'Pillar2');
+        this.add.image(192,569, 'Pillar2');
+        //
+        this.add.image(131,473, 'Pillar2');
+        this.add.image(102,473, 'Pillar2');
+        this.add.image(131,505, 'Pillar2');
+        this.add.image(102,505, 'Pillar2');
+        this.add.image(131,537, 'Pillar2');
+        this.add.image(102,537, 'Pillar2');
+        this.add.image(131,569, 'Pillar2');
+        this.add.image(102,569, 'Pillar2');
+        //
+        this.add.image(72,473, 'Pillar2');
+        this.add.image(72,505, 'Pillar2');
+        this.add.image(72,537, 'Pillar2');
+        this.add.image(72,569, 'Pillar2');
+        //
+        this.add.image(9,473, 'Pillar2');
+        this.add.image(9,505, 'Pillar2');
+        this.add.image(9,537, 'Pillar2');
+        this.add.image(9,569, 'Pillar2');
+        this.add.image(100, 590, 'herb1');
     }
 
    
 
     function update ()
     {
-        //Lance l'animation d'idle
-        player.anims.play('idle', true);
-
+        //Animations du joueur
         if(this.cursorKeys.space.isDown)
         {
+            player.anims.play('fishing', true);
             console.log("oui");
+        }
+        else
+        {
+            player.anims.play('idle', true);
         }
 
        
